--- a/.env
+++ b/.env
@@ -1,11 +1,13 @@
 # Project env
 PROJECT_NAME=pyicub
-RELEASE=master
 DOCKER_DOMAIN=iitschri
-DOCKER_SRC=iitschri/robotology-superbuild-docker:v2022.02.0
+USERNAME=icub
+ICUB_DISTRO=v2022.02.0
+DOCKER_SRC=iitschri/robotology-superbuild-docker:${ICUB_DISTRO}-ubuntu20.04
+PYICUB_VER=v6.0-rc2
 
 
 # Service env
-BASE_SERVICE_FILENAME=.dockyman/compose/common.yml
-BASE_SERVICE_NAME=common
+RELEASE=v6.0-rc2_distro.${ICUB_DISTRO}_ubuntu20.04
+LOCAL_PROFILE=common.yml
 PJT_DOCKER_IMAGE=${DOCKER_DOMAIN}/${PROJECT_NAME}-docker:${RELEASE}
