--- a/.dockyman/profiles/dbus.yml
+++ b/.dockyman/profiles/dbus.yml
@@ -2,7 +2,7 @@
 #
 # Copyright (c) 2022 Social Cognition in Human-Robot Interaction
 #                    Author: Davide De Tommaso (davide.detommaso@iit.it)
-#                    Project: Dockyman template
+#                    Project: Dockyman Template
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -26,11 +26,20 @@ version: '3.8'
 
 services:
 
-  robotology.base:
-    image: ${PJT_DOCKER_IMAGE}
+  local:
 
-    build:
-      context: docker
-      args:
-        DOCKER_SRC: ${DOCKER_SRC}
-        PYICUB_VER: ${PYICUB_VER}
+    extends:
+      file: ${LOCAL_PROFILE}
+      service: local
+
+    environment:
+        - DBUS_SESSION_BUS_ADDRESS=${DBUS_SESSION_BUS_ADDRESS}
+
+    volumes:
+      - type: bind
+        source: /run/dbus/system_bus_socket
+        target: /run/dbus/system_bus_socket
+
+      - type: bind
+        source: ${XDG_RUNTIME_DIR}/bus
+        target: ${XDG_RUNTIME_DIR}/bus
