--- a/.dockyman/profiles/root.yml
+++ b/.dockyman/profiles/root.yml
@@ -26,34 +26,20 @@ version: '3.8'
 
 services:
 
-  common:
+  local:
 
     environment:
         - DISPLAY=${DISPLAY}
         - QT_X11_NO_MITSHM=1
-        - PULSE_SERVER=unix:${XDG_RUNTIME_DIR}/pulse/native
-        - PULSE_COOKIE=/run/pulse/cookie
-        - XDG_RUNTIME_DIR=${XDG_RUNTIME_DIR}
-        - XDG_DATA_DIRS=${XDG_DATA_DIRS}
 
     privileged: true
     stdin_open: true
     tty: true
     network_mode: host
 
+    user: root
+
     volumes:
       - type: bind
         source: /tmp/.X11-unix
         target: /tmp/.X11-unix
-
-      - type: bind
-        source: ${HOME}/.config/pulse/cookie
-        target: /run/pulse/cookie
-
-      - type: bind
-        source: ${XDG_RUNTIME_DIR}/pulse
-        target: ${XDG_RUNTIME_DIR}/pulse
-
-      - type: bind
-        source: ${XDG_RUNTIME_DIR}/dconf
-        target: ${XDG_RUNTIME_DIR}/dconf
