--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,17 +19,45 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: checkout repo
-        uses: actions/checkout@v2
+     - name: Tag name
+       id: tag
+       run: echo "::set-output name=tag::${{ github.event.release.name }}"
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+     - name: Extract branch name
+       shell: bash
+       run: echo "##[set-output name=branch;]$(echo ${{ github.event.release.target_commitish }})"
+       id: extract_branch
 
-      - name: build
-        run: bash .dockyman/build.sh docker
+     - name: Checkout Repo
+       uses: actions/checkout@v3
+       with:
+         ref: ${{ steps.extract_branch.outputs.branch }}
 
-      - name: push
-        run: bash .dockyman/build.sh distro
+     - name: Log in to Docker Hub
+       uses: docker/login-action@v1
+       with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+     - name: Build and Push
+       run: |
+            git pull origin ${{ steps.extract_branch.outputs.branch }}
+            git checkout ${{ steps.extract_branch.outputs.branch }}
+            sed -i -r 's/^(RELEASE=).*/\1${{ steps.tag.outputs.tag }}/' .env
+            bash .dockyman/build.sh base
+            bash .dockyman/build.sh distro
+       env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+     - name: Commit Files
+       run: |
+            git config --global user.name 'S4HRI bot'
+            git config --global user.email 's4hri-bot@users.noreply.github.com'
+            git diff --exit-code || git commit -m "Auto versioning" -a
+
+     - name: Push Changes
+       uses: ad-m/github-push-action@master
+       with:
+         github_token: ${{ secrets.GITHUB_TOKEN }}
+         branch: ${{ steps.extract_branch.outputs.branch }}
+         force: true
