--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,17 +6,8 @@ LABEL maintainer="Davide De Tommaso <davide.detommaso@iit.it>"
 
 ARG PYICUB_VER
 
+#WORKDIR /home/icub
+
 USER icub
 
-RUN cd /home/icub && mkdir pyicub-lab;
-
-
-RUN cd /home/icub/pyicub-lab && \
-    git clone https://github.com/s4hri/pyicub -b ${PYICUB_VER} && \
-    cd pyicub && \
-    pip3 install -r requirements.txt;
-
-ENV PATH=$PATH:/home/icub/.local/bin
-ENV PYTHONPATH $PYTHONPATH:/home/icub/pyicub-lab/pyicub
-ENV YARP_COLORED_OUTPUT 1
-ENV YARP_FORWARD_LOG_ENABLE 1
+RUN git clone https://github.com/s4hri/pyicub-apps
