--- a/.env
+++ b/.env
@@ -2,12 +2,11 @@
 PROJECT_NAME=pyicub
 DOCKER_DOMAIN=iitschri
 USERNAME=icub
-ICUB_DISTRO=v2022.02.0
-DOCKER_SRC=iitschri/robotology-superbuild-docker:${ICUB_DISTRO}-ubuntu20.04
-PYICUB_VER=v6.0-rc2
-
+ICUB_DISTRO=v2022.02.0-ubuntu20.04
+PYICUB_VER=v6.1-rc1
+DOCKER_SRC=iitschri/pyicub-docker:${PYICUB_VER}.distro_${ICUB_DISTRO}
 
 # Service env
-RELEASE=v6.0-rc2_distro.${ICUB_DISTRO}_ubuntu20.04
+RELEASE=v6.1-rc1.distro_v2022.02.0-ubuntu20.04
 LOCAL_PROFILE=common.yml
 PJT_DOCKER_IMAGE=${DOCKER_DOMAIN}/${PROJECT_NAME}-docker:${RELEASE}
