--- a/.env
+++ b/.env
@@ -1,12 +1,29 @@
+# iCub configuration
+ICUB_SIMULATION=true
+ICUB_USER=icub
+ICUB_PSW=icub
+ICUB_HOST=icub-head
+ICUB_IP=10.0.0.2
+ICUBSRV_HOST=icubsrv
+ICUBSRV_IP=10.0.0.1
+ICUB_APPS=/home/icub/shared/apps/applications
+
+# Pyicub configuration
+PYICUB_LOGGING=true
+PYICUB_LOGGING_PATH=/home/icub/shared/logs
+PYICUB_REST=false
+PYICUB_REST_BACKEND_PORT=7000
+PYICUB_REST_FRONTEND_PORT=5000
+
 # Project env
 PROJECT_NAME=pyicub
 DOCKER_DOMAIN=iitschri
+RELEASE=v6.4-rc1_distro_v2022.02.0-ubuntu20.04
+
+# pyicub-docker
+PYICUB_BRANCH=v6.x
 USERNAME=icub
 ICUB_DISTRO=v2022.02.0-ubuntu20.04
-PYICUB_VER=v6.1-rc1
-DOCKER_SRC=iitschri/pyicub-docker:${PYICUB_VER}.distro_${ICUB_DISTRO}
-
-# Service env
-RELEASE=v6.1-rc1.distro_v2022.02.0-ubuntu20.04
 LOCAL_PROFILE=common.yml
 PJT_DOCKER_IMAGE=${DOCKER_DOMAIN}/${PROJECT_NAME}-docker:${RELEASE}
+DOCKER_SRC=iitschri/robotology-superbuild-docker:${ICUB_DISTRO}
