--- a/.env
+++ b/.env
@@ -11,14 +11,14 @@ ICUB_APPS=/home/icub/shared/apps/applications
 # Pyicub configuration
 PYICUB_LOGGING=true
 PYICUB_LOGGING_PATH=/home/icub/shared/logs
-PYICUB_REST=false
-PYICUB_REST_BACKEND_PORT=7000
-PYICUB_REST_FRONTEND_PORT=5000
+PYICUB_API=true
+PYICUB_API_BACKEND_HOST=0.0.0.0
+PYICUB_API_BACKEND_PORT=9000
 
 # Project env
 PROJECT_NAME=pyicub
 DOCKER_DOMAIN=iitschri
-RELEASE=v6.4-rc1_distro_v2022.02.0-ubuntu20.04
+RELEASE=v6.6-rc1_distro_v2022.02.0-ubuntu20.04
 
 # pyicub-docker
 PYICUB_BRANCH=v6.x
