Added docker and github actions

--- a/.env
+++ b/.env
@@ -27,4 +27,5 @@ USERNAME=icub
 ICUB_DISTRO=v2022.02.0-ubuntu20.04
 LOCAL_PROFILE=common.yml
 PJT_DOCKER_IMAGE=${DOCKER_DOMAIN}/${PROJECT_NAME}-docker:${RELEASE}
-DOCKER_SRC=iitschri/robotology-superbuild-docker:${ICUB_DISTRO}
+DOCKER_SRC=${DOCKER_DOMAIN}/robotology-superbuild-docker:${ICUB_DISTRO}
+PYICUB_FRONTEND_DOCKER_IMAGE=${DOCKER_DOMAIN}/pyicub-frontend:${RELEASE}
