--- a/.env
+++ b/.env
@@ -12,9 +12,11 @@ ICUB_APPS=/home/icub/shared/apps/applications
 PYICUB_LOGGING=true
 PYICUB_LOGGING_PATH=/home/icub/shared/logs
 PYICUB_API=true
-PYICUB_API_BACKEND_HOST=0.0.0.0
-PYICUB_API_BACKEND_PORT=9001
 PYICUB_API_FRONTEND_PORT=9000
+PYICUB_API_RESTMANAGER_HOST=0.0.0.0
+PYICUB_API_RESTMANAGER_PORT=9001
+PYICUB_API_PROXY_HOST=0.0.0.0
+PYICUB_API_PROXY_PORT=9001
 
 # Project env
 PROJECT_NAME=pyicub
