fixed for frontend

--- a/.env
+++ b/.env
@@ -15,11 +15,12 @@ PYICUB_API=true
 PYICUB_API_FRONTEND_PORT=9000
 PYICUB_API_PROXY_HOST=0.0.0.0
 PYICUB_API_PROXY_PORT=9001
+REACT_APP_NAME=pywebapp
 
 # Project env
 PROJECT_NAME=pyicub
 DOCKER_DOMAIN=iitschri
-RELEASE=v6.8-rc2_distro_v2022.02.0-ubuntu20.04
+RELEASE=v6.8-rc3_distro_v2022.02.0-ubuntu20.04
 
 # pyicub-docker
 PYICUB_BRANCH=master
