--- a/.dockyman/profiles/gpus.yaml
+++ b/.dockyman/profiles/gpus.yaml
@@ -1,8 +1,8 @@
 # MIT License
 #
-# Copyright (c) 2022 Social Cognition in Human-Robot Interaction
+# Copyright (c) 2023 Istituto Italiano di Tecnologia (IIT)
 #                    Author: Davide De Tommaso (davide.detommaso@iit.it)
-#                    Project: Dockyman Template
+#                    Project: Dockyman
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -26,11 +26,9 @@ version: '3.8'
 
 services:
 
-  local:
-
-    extends:
-      file: common.yml
-      service: local
+  nvidia-gpu:
+    environment:
+      - GPU_PROFILE=${GPU_PROFILE:?err}
 
     deploy:
       resources:
@@ -38,4 +36,8 @@ services:
           devices:
             - driver: nvidia
               count: all
-              capabilities: [graphics,utility]
+              capabilities: [utility, compute, graphics]
+
+  no-gpu:
+    environment:
+      - GPU_PROFILE=${GPU_PROFILE:?err}
