--- a/.dockyman/services/dockyman.yaml
+++ b/.dockyman/services/dockyman.yaml
@@ -1,8 +1,8 @@
 # MIT License
 #
-# Copyright (c) 2022 Social Cognition in Human-Robot Interaction
+# Copyright (c) 2023 Istituto Italiano di Tecnologia (IIT)
 #                    Author: Davide De Tommaso (davide.detommaso@iit.it)
-#                    Project: Dockyman Template
+#                    Project: Dockyman
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -22,24 +22,18 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
-version: '3.8'
-
 services:
 
-  local:
-
-    environment:
-        - DISPLAY=${DISPLAY}
-        - QT_X11_NO_MITSHM=1
-
-    privileged: true
-    stdin_open: true
-    tty: true
-    network_mode: host
-
-    user: root
+  dockyman:
+    image: iitschri/dockyman:${DOCKYMAN_VER:?err}
 
     volumes:
-      - type: bind
-        source: /tmp/.X11-unix
-        target: /tmp/.X11-unix
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /etc/group:/etc/group:ro
+
+    entrypoint: /bin/bash dockyman --action ${ACTION:-noaction} --uid ${USER_UID} --gid ${USER_GID}
+
+  devcontainer:
+    extends: dockyman
+
+    entrypoint: devcontainer
