--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,66 +1,29 @@
-# This is a basic workflow to help you get started with Actions
+name: Docker Release
 
-name: CI
-
-# Controls when the workflow will run
 on:
   release:
-    types: [published]
+    types:
+      - created
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    
     steps:
-     - name: Tag name
-       id: tag
-       run: echo "::set-output name=tag::${{ github.event.release.name }}"
+      - name: Checkout
+        uses: actions/checkout@v3
 
-     - name: Extract branch name
-       shell: bash
-       run: echo "##[set-output name=branch;]$(echo ${{ github.event.release.target_commitish }})"
-       id: extract_branch
+      - name: Checkout private repo
+        uses: actions/checkout@v3
 
-     - name: Checkout Repo
-       uses: actions/checkout@v3
-       with:
-         ref: ${{ steps.extract_branch.outputs.branch }}
-
-     - name: Log in to Docker Hub
-       uses: docker/login-action@v1
-       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-     - name: Build and Push
-       run: |
-            git pull origin ${{ steps.extract_branch.outputs.branch }}
-            git checkout ${{ steps.extract_branch.outputs.branch }}
-            sed -i -r 's/^(RELEASE=).*/\1${{ steps.tag.outputs.tag }}/' .env
-            sed -i -r 's/^(PYICUB_BRANCH=).*/\1${{ steps.extract_branch.outputs.branch }}/' .env
-            sed -i -e "/ICUB_DISTRO=/c\ICUB_DISTRO=$(cut -d'_' -f3 <<<"${{ steps.tag.outputs.tag }}")" .env
-            cat .env
-            bash .dockyman/build.sh base
-            bash .dockyman/build.sh distro
-       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-     - name: Commit Files
-       run: |
-            git config --global user.name 'S4HRI bot'
-            git config --global user.email 's4hri-bot@users.noreply.github.com'
-            git diff --exit-code || git commit -m "Auto versioning" -a
-
-     - name: Push Changes
-       uses: ad-m/github-push-action@master
-       with:
-         github_token: ${{ secrets.GITHUB_TOKEN }}
-         branch: ${{ steps.extract_branch.outputs.branch }}
-         force: true
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+         
+      - name: Build and push Docker image
+        run: |
+          make -C .devcontainer release VERSION=${{ github.event.release.tag_name }}
+          make -C .devcontainer build
+          make -C .devcontainer push
