--- a/build.env
+++ b/build.env
@@ -2,7 +2,7 @@ DOCKYMAN_VER=v1.0
 PROFILE=dev
 REPOSITORY=iitschri
 
-VERSION=v6.9-rc1_distro_v2022.02.0-ubuntu20.04
+VERSION=v7.0-distro_v2022.02.0-ubuntu20.04
 ICUB_DISTRO=v2022.02.0-ubuntu20.04
 
 PYICUB_BASE_DOCKER_SRC=${REPOSITORY}/robotology-superbuild-docker:${ICUB_DISTRO}
