--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,18 +12,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
-      - name: Checkout private repo
-        uses: actions/checkout@v3
-
-      - name: Login to Docker Hub
+      
+      - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-         
+         username: ${{ secrets.DOCKER_USERNAME }}
+         password: ${{ secrets.DOCKER_PASSWORD }}
+                 
       - name: Build and push Docker image
         run: |
+          docker login
           make -C .dockyman release VERSION=${{ github.event.release.tag_name }}
           make -C .dockyman build
           make -C .dockyman push
