--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,7 +18,7 @@ jobs:
          
       - name: Build and push Docker image
         run: |
-          make -C .dockyman release VERSION=${{ github.event.release.tag_name }}
+          make -C .dockyman dev
           make -C .dockyman build
           DOCKERHUBUSERNAME=$DOCKER_USERNAME DOCKERHUBPASSWORD=$DOCKER_PASSWORD make -C .dockyman push
           
