--- a/build.env
+++ b/build.env
@@ -1,6 +1,6 @@
 DOCKYMAN_VER=v1.0
-PROFILE=dev
 REPOSITORY=iitschri
+PROFILE=development
 
 VERSION=v7.0-distro_v2022.02.0-ubuntu20.04
 ICUB_DISTRO=v2022.02.0-ubuntu20.04
