--- a/base/pyicub/.devcontainer.json
+++ b/base/pyicub/.devcontainer.json
@@ -3,7 +3,8 @@
 	{ 
 			"dockerfile": "Dockerfile",
 			"args": { "DOCKER_SRC": "${localEnv:DOCKER_SRC}",
-					  "PYICUB_VERSION": "${localEnv:PYICUB_VERSION}" }
+					  "PYICUB_VERSION": "${localEnv:PYICUB_VERSION}"
+					}
 	}
   
 }
