--- a/pyicub.env
+++ b/pyicub.env
@@ -8,6 +8,9 @@ ICUBSRV_HOST=icubsrv
 ICUBSRV_IP=10.0.0.1
 ICUB_APPS=/workdir/apps
 
+# YARP configuration
+YARP_FORWARD_LOG_ENABLE=1
+
 # API configuration
 PYICUB_LOGGING=true
 PYICUB_LOGGING_PATH=/workdir/logs
