--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -8,6 +8,19 @@
   "mounts": [
     "source=${localEnv:HOME}/.config/Code,target=/home/icub/.config/Code,type=bind,consistency=ro",
     "source=${localEnv:HOME}/.config/git,target=/home/icub/.config/git,type=bind,consistency=ro"
-  ]
+  ],
+    "customizations": {
+      "vscode": {
+        
+          "settings": { 
+              "python.defaultInterpreterPath": "/usr/bin/python3"
+            },
+
+          "extensions": [
+              "ms-python.python",
+              "ms-python.vscode-pylance"
+            ]
+    }
+  }
 
 }
